--- a/2-Examples/Session 01 - Introduction to the HTML5/2-format.html
+++ b/2-Examples/Session 01 - Introduction to the HTML5/2-format.html
@@ -15,6 +15,26 @@
   <i>This text is displayed in italic.</i><br />
   <u>This text is underlined.</u><br />
   <small>This text is displayed smaller.</small>
+
+  <h3>Updating, Emphasizing, and Shifting Text</h3>
+  This is an example of <del>deleted</del> <ins>inserted </ins> text.<br />
+  The is an example of <strong>Strong</strong> text.<br />
+  The is an example of <sub>subscript</sub>text.<br />
+  The is an example of <sup>superscript</sup> text.<br />
+  <em>Used for emphasized text</em>
+
+  <h2>Definition Element Text</h2>
+  <p><dfn title="HyperText Markup Language">HTML</dfn> is standard markup language for creating web pages.</p>
+
+  <h2>Abbreviation Text (Popular)</h2>
+  <p><abbr title="HyperText Markup Language">HTML</abbr> is standard markup language for creating web pages.</p>
+
+  <h2>Citation Text</h2>
+  <p><cite>The Scream</cite> by Edward Munch. Painted in 1893.</p>
+
+  <h2>Computer Programming Text</h2>
+  <code> var name = 'Javascript';</code><br />
+  <samp> var n = 9; </samp><br />
 </body>
 
 </html>
