--- a/2-Examples/Session 02 - Formatting Text using Tags/7-image2.html
+++ b/2-Examples/Session 02 - Formatting Text using Tags/7-image2.html
@@ -8,6 +8,6 @@
   </head>
   <body bgcolor="#047FFE">
     <h1>PlayStattion 5</h1>
-    <img src="https://photo2.tinhte.vn/data/attachment-files/2020/07/5071109_o_quang_playstation.jpg" width="100%" />
+    <img style="object-fit: cover;" src="https://kenh14cdn.com/203336854389633024/2022/3/8/photo-1-16467175431221225437237.jpg" width="300" height="300" />
   </body>
 </html>
