--- a/2-Examples/Session 03 - Creating Hyperlinks and  Anchors/4-RelativePath.html
+++ b/2-Examples/Session 03 - Creating Hyperlinks and  Anchors/4-RelativePath.html
@@ -17,9 +17,9 @@
 
 
   <hr />
-  <a href="../Session-01/01.Basic.html">01.Basic</a>
+  <a href="../Session 01 - Introduction to the HTML5/2-format.html">02.Format</a>
   <hr />
-  <a target="_blank" href="../Images/HTML5.png">Link to image</a>
+  <a target="_blank" href="./Images/HTML5.png">Link to image</a>
 </body>
 
 </html>
