--- a/2-Examples/Session 03 - Creating Hyperlinks and  Anchors/5-EmailLink.html
+++ b/2-Examples/Session 03 - Creating Hyperlinks and  Anchors/5-EmailLink.html
@@ -9,7 +9,7 @@
 <body>
     <a href="mailto:customercare@aptech.ac.in">Customer Care</a>
     <br />
-    <a href="mailto:tungnt@softech.vn?Subject=FEEDBACK">Mail to Mr. Tung (Softech)</a>
+    <a href="mailto:phamhungmanh43@gmail.com?Subject=FEEDBACK">Mail to Manh</a>
 </body>
 
 </html>
