--- a/2-Examples/Session 02 - Formatting Text using Tags/3-definition-list.html
+++ b/2-Examples/Session 02 - Formatting Text using Tags/3-definition-list.html
@@ -7,8 +7,11 @@
     <title>Definition List</title>
   </head>
   <body>
-    <dl>
+    <!-- viết tắt của chữ "definition list" có nghĩa là sự xác định (hay định nghĩa) danh sách. -->
+    <dl> 
+      <!-- viết tắt của chữ "defines an item" có nghĩa là xác định (hay định nghĩa) một mục. -->
       <dt>Cat</dt>
+      <!-- viết tắt của chữ "defines describe an item" có nghĩa là xác định (hay định nghĩa) một mô tả của một mục. -->
       <dd>Có nghĩa là con mèo</dd>
       <dt>Dog</dt>
       <dd>Có ngĩa là con chó</dd>
