--- a/2-Examples/Session 03 - Creating Hyperlinks and  Anchors/6-HyperlinkToOtherTypes.html
+++ b/2-Examples/Session 03 - Creating Hyperlinks and  Anchors/6-HyperlinkToOtherTypes.html
@@ -9,13 +9,11 @@
 <body>
     <a href="Files/File.rar">Download</a>
     <hr />
-    <a href="skype:thanhtungo?chat">Start skype chat</a> ?
+    <a href="live:.cid.a18bc83d43e325d4?chat">Start skype chat</a> ?
     <hr />
-    <a href="skype:thanhtungo?call">Start skype call</a> ?
+    <a href="live:.cid.a18bc83d43e325d4?call">Start skype call</a> ?
     <hr />
-    <a href="https://www.messenger.com/t/mr.bao108"> CHAT WITH BAO</a>
-    <hr />
-    <a href="https://www.messenger.com/t/ngothanhtung.it"> CHAT WITH TUNG</a>
+    <a href="https://www.messenger.com/t/xoa81"> CHAT WITH MANH</a>
 </body>
 
 </html>
