--- a/2-Examples/Session 01 - Introduction to the HTML5/order.html
+++ b/2-Examples/Session 01 - Introduction to the HTML5/order.html
@@ -12,6 +12,8 @@
     <h2>Blockquote Text</h2>
     <blockquote>“When one door closes, another opens; but we often look so long and so regretfully upon the closed door
         that we do not see the one which has opened for us.” - <cite> Alexander Graham Bell</cite> </blockquote> 
+    <blockquote>“When one door closes, another opens; but we often look so long and so regretfully upon the closed door
+        that we do not see the one which has opened for us.” - <cite> Alexander Graham Bell</cite> </blockquote>
 </body>
 
 </html>
