--- a/2-Examples/Session 03 - Creating Hyperlinks and  Anchors/_demo.html
+++ b/2-Examples/Session 03 - Creating Hyperlinks and  Anchors/_demo.html
@@ -8,8 +8,10 @@
   <title>Document</title>
 </head>
 
-<body>
-  <img src="./Images/Microsoft.png" />
-</body>
+<frameset cols="25%,*,25%">
+  <frame name ="name1"  src="./1-SimpleHyperlink.html">
+  <frame name ="name2"  src="./5-EmailLink.html">
+  <frame name ="name3"  src="./2-HyperlinkWithTarget.html">
+</frameSet>
 
 </html>
