--- a/2-Examples/Session 03 - Introduction to CSS3/Pseudo/Classes/Psuedo-classes.html
+++ b/2-Examples/Session 03 - Introduction to CSS3/Pseudo/Classes/Psuedo-classes.html
@@ -11,7 +11,7 @@
 
     /* unvisited link */
     a:link {
-      color: blue;
+      color: orange;
       /* text-decoration: none; */
     }
 
@@ -27,7 +27,7 @@
 
     /* selected link */
     a:active {
-      color: orange;
+      color: red;
     }
   </style>
 </head>
