--- a/2-Examples/Session 03 - Introduction to CSS3/Pseudo/Elements/Psuedo_elements_1.html
+++ b/2-Examples/Session 03 - Introduction to CSS3/Pseudo/Elements/Psuedo_elements_1.html
@@ -22,7 +22,7 @@
     }
 
     /* dùng để style cho phần tử con đầu tiên của phần tử được chọn */
-    ul:first-child {
+    li:first-child {
       color: red
     }
   </style>
