--- a/2-Examples/Session 03 - Introduction to CSS3/Pseudo/Classes/out-of-range.html
+++ b/2-Examples/Session 03 - Introduction to CSS3/Pseudo/Classes/out-of-range.html
@@ -19,6 +19,7 @@
     <h3>A demonstration of the :out-of-range selector.</h3>
 
     <input type="number" min="5" max="10" value="17">
+    <input type="number" min="5" max="10" value="7">
 </body>
 
 </html>
