--- a/2-Examples/Session 03 - Introduction to CSS3/Pseudo/Classes/target.html
+++ b/2-Examples/Session 03 - Introduction to CSS3/Pseudo/Classes/target.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        a:target {
+        p:target {
             border: 2px solid green;
             background-color: red;
         }
