--- a/2-Examples/Session 03 - Introduction to CSS3/external-css.html
+++ b/2-Examples/Session 03 - Introduction to CSS3/external-css.html
@@ -3,14 +3,31 @@
 
 <head>
   <title></title>
-  <link rel="stylesheet" href="mystyle.css" />
-  <!-- <link rel="stylesheet" href="mystyle2.css" /> -->
+  <link rel="stylesheet" href="./mystyle.css">
+  <link rel="stylesheet" href="./mystyle2.css">
+  <style>
+    .div2 .color-red{
+      color: blue
+    }
+
+  </style>
 </head>
 
 <body>
-  <h1>Hello External CSS</h1>
-  <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, ipsa aliquam? Suscipit distinctio obcaecati sunt
-    error consequatur, quasi eaque totam id dolor in ut vel, nihil asperiores animi perspiciatis iure?</h2>
+  <div class="container">
+    <div class="div1">
+      <h2 class="color-red">Color Red</h2>
+    </div>
+
+    <div class="div2">
+      <h2 class="color-red"> Color blue</h2>
+    </div>
+
+    <h1>Hello External CSS</h1>
+    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, ipsa aliquam? Suscipit distinctio obcaecati sunt
+      error consequatur, quasi eaque totam id dolor in ut vel, nihil asperiores animi perspiciatis iure?</h2>
+  </div>
 </body>
+
 
 </html>
