--- a/2-Examples/Session 03 - Introduction to CSS3/newpage.html
+++ b/2-Examples/Session 03 - Introduction to CSS3/newpage.html
@@ -6,40 +6,54 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CSS Basic</title>
-  <link href="./bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./bootstrap-5.2.1-dist/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous"> -->
+  <!-- <link href="./bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet" /> -->
   <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css" rel="stylesheet" /> -->
-  <link href="style1.css" rel="stylesheet" />
-
-  <style>
-    #product-name {
-      color: blue;
-    }
-
-    h1 {
-      color: yellow;
-    }
-
-    .heading {
-      font-size: 24pt;
-    }
-
-    .small-text {
-      font-size: 28px;
-    }
-  </style>
+  <!-- <link href="style1.css" rel="stylesheet" /> -->
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous"> -->
 </head>
 
 <body>
-  <div>
+  <h1 class="test">TEST BOOTSTRAP</h1>
+
+  <!-- <div class="row">
+    <div class="col">1</div>
+    <div class="col">2</div>
+    <div class="col">3</div>
+  </div> -->
+
+  <!-- <div class="contaiter">
     <h1 class="heading">Hello CSS3</h1>
     <h1>Hello HTML5</h1>
     <h2 class="heading small-text">Welcome to Aptech</h2>
     <h1 id="product-name">iPhone 12 Pro</h1>
     <button type="button" class="btn btn-primary">Primary</button>
+    <a href="">12312312</a>
+    <a href="">12312312</a>
+  </div> -->
+
+  <!-- <div class="progress ">
+    <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+  </div> -->
+
+  <!-- <div class="row w-50 m-auto border border-secondary">
+    <div class="col-3 bg-danger p-0">COl 1</div>
+    <div class="col p-0">
+      <div class="col-100 position-relative">
+        <div class="col-40 bg-primary m-0 position-absolute w-50">50%</div>
+      </div>
+    </div>
+  </div> -->
+
+  <div class="row w-50 m-auto">
+    <div class="col-2 tille bg-danger">COL 1</div>
+    <div class="col div_percent bg-secondary position-relative p-0">
+      <div class="bg-success position-absolute w-50">50%</div>
+    </div>
   </div>
 
   <script src="./bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./bootstrap-5.2.1-dist/js/popper.min.js"></script>
   <script src="./bootstrap-5.2.1-dist/js/bootstrap.min.js"></script>
 </body>
 
