--- a/2-Examples/Base/index.html
+++ b/2-Examples/Base/index.html
@@ -12,11 +12,8 @@
 
 <body>
     <div class="div__container">
-        <!-- <iframe src="./header.html" seamless></iframe> -->
-        <!-- <header class='py-3 ps-2 mb-5 bg__ccc text__white'>
-            <h1>The Pulpit Rock</h1>
-        </header> -->
-        <header></header>
+        <iframe class="w-100" style="height: 70px;" src="./header.html" seamless></iframe>
+        <!-- <header></header> -->
 
         <div class="row w-100">
             <div class="col-12 col-md-3 mb-3">
