--- a/2-Examples/Base/index.html
+++ b/2-Examples/Base/index.html
@@ -85,7 +85,9 @@
     <script src="./bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="./bootstrap-5.2.1-dist/js/bootstrap.min.js"></script>
     <script src="./js/home.js"></script>
-
+    <script>
+        console.log(window.location.href);
+    </script>
 </body>
 
 </html>
