--- a/2-Examples/Base/list.html
+++ b/2-Examples/Base/list.html
@@ -12,8 +12,8 @@
 <body>
     <!-- <header></header> -->
     <iframe class="w-100" style="height: 70px;" src="./header.html" seamless></iframe>
-    <div class="w-50 m-auto mt-3">
-        <table class="table table-dark table-striped">
+    <div class="w-75 m-auto mt-3">
+        <table  id="table_users" class="table table-dark table-striped">
             <thead>
                 <tr>
                     <th scope="col">#</th>
@@ -60,7 +60,7 @@
     <script src="./jquery/jquery.min.js"></script>
     <script src="./bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="./bootstrap-5.2.1-dist/js/bootstrap.min.js"></script>
-    <script src="./js/home.js"></script>
+    <script src="./js/list.js"></script>
 </body>
 
 </html>
