--- a/2-Examples/Base/form.html
+++ b/2-Examples/Base/form.html
@@ -21,7 +21,8 @@
         </div>
         <div class="mb-3">
             <label for="input__password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="input__password" onchange="console.log('onchange',this.value)">
+            <input type="password" class="form-control" id="input__password"
+                onchange="console.log('onchange',this.value)">
         </div>
         <div class="mb-3 form-check">
             <input type="checkbox" class="form-check-input" id="input__checkbox">
@@ -51,8 +52,31 @@
         }
 
         function handleSubmit(event) {
-            console.log(event);
+            let elementInputEmail = document.getElementById('input__email');
+            let elementInputPassword = document.getElementById('input__password');
+            let elementInputCheckBox = document.getElementById('input__checkbox');
+            let objectUser = {
+                name: elementInputEmail?.value,
+                avatar:
+                    "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/254.jpg",
+            }
+            // console.log(objectUser);
+            postData(objectUser)
             return false;
+        }
+        function postData(user) {
+            fetch("https://63284e93a2e90dab7bdd0fd7.mockapi.io/api/v1/users", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify(user),
+            })
+                .then((response) => response.json())
+                .then((res) => console.log(res))
+                .catch((error) => {
+                    console.error("Error:", error);
+                });
         }
     </script>
 </body>
