--- a/2-Examples/Base/detail.html
+++ b/2-Examples/Base/detail.html
@@ -10,7 +10,9 @@
 <body>
     <iframe class="w-100" style="height: 70px;" src="./header.html" seamless></iframe>
     <h1>Detail</h1>
-    <div id="info"></div>
+    <div id="info">
+        
+    </div>
 
     <script src="./jquery/jquery.min.js"></script>
     <script src="./bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
