--- a/2-Examples/Base/form.html
+++ b/2-Examples/Base/form.html
@@ -55,10 +55,11 @@
             let elementInputEmail = document.getElementById('input__email');
             let elementInputPassword = document.getElementById('input__password');
             let elementInputCheckBox = document.getElementById('input__checkbox');
+            
             let objectUser = {
                 name: elementInputEmail?.value,
-                avatar:
-                    "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/254.jpg",
+                // avatar:
+                //     "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/254.jpg",
             }
             // console.log(objectUser);
             postData(objectUser)
