--- a/2-Examples/Base/header.html
+++ b/2-Examples/Base/header.html
@@ -19,13 +19,13 @@
     </div> -->
     <ul class="nav nav-tabs">
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" target="_top" href="./index.html">HOME</a>
+            <a class="nav-link" id="nav__item__home" aria-current="page" target="_top" href="./index.html">HOME</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" target="_top" href="./list.html">LIST</a>
+            <a class="nav-link" id="nav__item__list" target="_top" href="./list.html">LIST</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" target="_top" href="./form.html">FORM</a>
+            <a class="nav-link" id="nav__item__form" target="_top" href="./form.html">FORM</a>
         </li>
     </ul>
     <script src="./jquery/jquery.min.js"></script>
