--- a/2-Examples/Base/index.html
+++ b/2-Examples/Base/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="div__container">
-        <iframe class="w-100" style="height: 70px;" src="./header.html" seamless></iframe>
-        <!-- <header></header> -->
+        <!-- <iframe class="w-100" style="height: 70px;" src="./header.html" seamless></iframe> -->
+        <header></header>
 
         <div class="row w-100">
             <div class="col-12 col-md-3 mb-3">
