--- a/2-Examples/Session 11 - Bootstrap - Jquery/Jquery-Validate/jquery-validate.html
+++ b/2-Examples/Session 11 - Bootstrap - Jquery/Jquery-Validate/jquery-validate.html
@@ -65,7 +65,7 @@
       <div class="checkbox">
         <label>Check me out <input name="checkme" type="checkbox" /> </label>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary" onclick="handleClick">Submit</button>
       <button type="reset" class="btn btn-default">Reset</button>
     </form>
   </div>
