--- a/2-Examples/Base/index.html
+++ b/2-Examples/Base/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="div__container">
-        <!-- <iframe class="w-100" style="height: 70px;" src="./header.html" seamless></iframe> -->
+        <iframe class="w-100" style="height: 70px;" src="./header.html" seamless></iframe>
         <header></header>
 
         <div class="row w-100">
