--- a/2-Examples/Base/form.html
+++ b/2-Examples/Base/form.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <!-- <header></header> -->
-    <iframe class="w-100" style="height: 70px;" src="./header.html" seamless></iframe>
+    <header></header>
+    <!-- <iframe class="w-100" style="height: 70px;" src="./header.html" seamless></iframe> -->
     <form id="myForm" class="w-50 m-auto mt-3" onsubmit="return false;">
         <div class="mb-3">
             <label for="input__email" class="form-label">Email address</label>
