--- a/2-Examples/Base/index.html
+++ b/2-Examples/Base/index.html
@@ -7,16 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Demo</title>
     <link rel="stylesheet" href="./bootstrap-5.2.1-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/home.css">
 </head>
 
 <body>
     <div class="div__container">
         <!-- <iframe class="w-100" style="height: 70px;" src="./header.html" seamless></iframe> -->
         <header></header>
-        <header>
-
-        </header>
 
         <div class="row w-100">
             <div class="col-12 col-md-3 mb-3">
@@ -87,6 +83,7 @@
     <script src="./jquery/jquery.min.js"></script>
     <script src="./bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="./bootstrap-5.2.1-dist/js/bootstrap.min.js"></script>
+    <script src="./js/home.js"></script>
 </body>
 
 </html>
