--- a/2-Examples/Base/header.html
+++ b/2-Examples/Base/header.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./bootstrap-5.2.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/home.css">
 </head>
 
 <body>
@@ -28,9 +29,9 @@
             <a class="nav-link" id="nav__item__form" target="_top" href="./form.html">FORM</a>
         </li>
     </ul>
-    <script src="./jquery/jquery.min.js"></script>
+    <!-- <script src="./jquery/jquery.min.js"></script>
     <script src="./bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./bootstrap-5.2.1-dist/js/bootstrap.min.js"></script>
+    <script src="./bootstrap-5.2.1-dist/js/bootstrap.min.js"></script> -->
     <script>
         // console.log(window.top.location.href);
     </script>
