--- a/2-Examples/Base/list.html
+++ b/2-Examples/Base/list.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <!-- <header></header> -->
-    <iframe class="w-100" style="height: 70px;" src="./header.html" seamless></iframe>
+    <header></header>
+    <!-- <iframe class="w-100" style="height: 70px;" src="./header.html" seamless></iframe> -->
     <div class="w-75 m-auto mt-3">
         <table  id="table_users" class="table table-dark table-striped">
             <thead>
@@ -61,6 +61,7 @@
     <script src="./bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="./bootstrap-5.2.1-dist/js/bootstrap.min.js"></script>
     <script src="./js/list.js"></script>
+    <script src="./js/home.js"></script>
 </body>
 
 </html>
