--- a/2-Examples/ex/index.html
+++ b/2-Examples/ex/index.html
@@ -6,9 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Change Title</title>
+    <style>
+        .color__red{
+            color: rgb(59, 41, 41) !important
+        }
+    </style>
 </head>
 
 <body>
+    <h1 class="color__red" style="color: blue;">FORM</h1>
     <form onsubmit="return false" id="form__login">
         <input type="email" id="input__email" placeholder="Enter your email">
         <input type="password" id="input__password">
